--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <section>
   <div class="container">
     <h2>Contact Us</h2>
-    <p>Have any questions or suggestions? Feel free to reach out to us via email: contact@gameraforever.com</p>
+    <p>Have any questions or suggestions? Feel free to reach out to us via email: contact@gamersforever.com</p>
   </div>
 </section>
 
